--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/MainTheme">
 
 
         <activity android:name=".MainActivity">
@@ -21,10 +21,13 @@
 
         </activity>
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+              ...
+             WHF ??!?!??-->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
