--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:theme="@style/MainTheme">
 
 
-        <activity android:name=".MainActivity">
+        <activity android:name="ru.stupnikov.application.controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ru.stupnikov.application.controller.Edit_pouch_activity" android:label="@string/pouch_settings">
+        <activity android:name="ru.stupnikov.application.controller.EditPouchActivity" android:label="@string/pouch_settings">
 
         </activity>
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
