--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         <activity android:name="ru.stupnikov.application.controller.EditPouchActivity" android:label="@string/pouch_settings">
 
         </activity>
+        <activity android:name="ru.stupnikov.application.controller.BudgetControlActivity" android:label="Контроль Бюджета">
+
+        </activity>
+
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
               ...
