--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ru.stupnikov.application.controller.EditPouchActivity" android:label="@string/pouch_settings">
+        <activity android:name="ru.stupnikov.application.controller.EditWalletActivity" android:label="@string/pouch_settings">
         </activity>
         <activity android:name="ru.stupnikov.application.controller.ContolBudgetActivity" android:label="@string/controlBudget">
         </activity>
