--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,18 @@
 
 
         <activity android:name="ru.stupnikov.application.controller.MainActivity">
-            <intent-filter>
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ru.stupnikov.application.controller.EditWalletActivity" android:label="@string/pouch_settings">
-        </activity>
-        <activity android:name="ru.stupnikov.application.controller.ContolBudgetActivity" android:label="@string/controlBudget">
-        </activity>
-        <activity android:name="ru.stupnikov.application.controller.EditArticleActivity" android:label="@string/editArcticle">
-        </activity>
-        <activity android:name="ru.stupnikov.application.controller.GeneralSettingsActivity" android:label="@string/general_settings"></activity>
+        <activity android:name="ru.stupnikov.application.controller.EditWalletActivity" android:label="@string/pouch_settings"></activity>
 
+        <activity android:name="ru.stupnikov.application.controller.ContolBudgetActivity" android:label="@string/controlBudget"></activity>
+        <activity android:name="ru.stupnikov.application.controller.EditArticleActivity" android:label="@string/editArcticle"></activity>
+        <activity android:name="ru.stupnikov.application.controller.GeneralSettingsActivity" android:label="@string/general_settings"></activity>
+        <activity android:name="ru.stupnikov.application.fragment.MaintFragmentActivity" android:label="test"></activity>
 
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
