--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,20 +10,20 @@
         android:theme="@style/MainTheme">
 
 
-        <activity android:name="ru.stupnikov.application.controller.MainActivity">
+        <activity android:name="ru.stupnikov.application.activity.MainActivity">
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ru.stupnikov.application.controller.EditWalletActivity" android:label="@string/pouch_settings"></activity>
+        <activity android:name="ru.stupnikov.application.activity.EditWalletActivity" android:label="@string/pouch_settings"></activity>
 
-        <activity android:name="ru.stupnikov.application.controller.ContolBudgetActivity" android:label="@string/controlBudget"></activity>
-        <activity android:name="ru.stupnikov.application.controller.EditArticleActivity" android:label="@string/editArcticle"></activity>
-        <activity android:name="ru.stupnikov.application.controller.GeneralSettingsActivity" android:label="@string/general_settings"></activity>
+        <activity android:name="ru.stupnikov.application.activity.ContolBudgetActivity" android:label="@string/controlBudget"></activity>
+        <activity android:name="ru.stupnikov.application.activity.EditArticleActivity" android:label="@string/editArcticle"></activity>
+        <activity android:name="ru.stupnikov.application.activity.GeneralSettingsActivity" android:label="@string/general_settings"></activity>
         <activity android:name="ru.stupnikov.application.fragment.MaintFragmentActivity" android:label="test"></activity>
-        <activity android:name="ru.stupnikov.application.controller.StatisticBudgetActivity" android:label="@string/statistic"></activity>
+        <activity android:name="ru.stupnikov.application.activity.StatisticBudgetActivity" android:label="@string/statistic"></activity>
 
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
@@ -38,5 +38,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
