added new class DBmanager

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.pushtorefresh.storio:sqlite:1.8.0'
 }
