--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:supportsRtl="true"
         android:theme="@style/MainTheme">
 
+        <meta-data android:name="DATABASE" android:value="main_databse.db"/>
+        <meta-data android:name="VERSION" android:value="2"/>
+        <meta-data android:name="QUERY_LOG" android:value="true"/>
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="ru.stupnikov.application"/>
 
         <activity android:name="ru.stupnikov.application.activity.MainActivity">
              <intent-filter>
