--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,11 @@ dependencies {
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.pushtorefresh.storio:sqlite:1.8.0'
-    compile 'com.github.satyan:sugar:1.4'
+
+    repositories {
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    }
+
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
