--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     }
 
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile('com.mikepenz.materialdrawer:library:0.9.5@aar') {
+        transitive = true
+    }
 }
